--- a/Gen_AI_Class_1_(1).ipynb
+++ b/Gen_AI_Class_1_(1).ipynb
@@ -38,7 +38,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "[link text](https://)### **1. Introduction to Programming**\n",
+        "[link text](https://)### ** today I,m starting my python journey on Udemy and this is the note provided by my instructor mr.arul looking forward to ace this too\n",
+        "\n",
+        "**1. Introduction to Programming**\n",
         "- **What is Programming?**\n",
         "  - Programming is the process of giving instructions to a computer to perform specific tasks.\n",
         "  - Think of it as writing a detailed set of directions that the computer will follow exactly as written.\n",
