--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPGZMtkFHNZI4yr9nwnPGWW",
+      "authorship_tag": "ABX9TyPTE/nHlz2SOB1WGiqgqiCH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,31 +29,35 @@
     {
       "cell_type": "code",
       "source": [
-        "age= 19\n",
-        "g= 9.9\n",
-        "name=\"Ankit Raj Singh\"\n",
-        "print(type(age))\n",
-        "print(type(g))\n",
-        "print(type(name))\n",
-        "print(10&)"
+        "score=int(input(\"what is your score \"))\n",
+        "if score >= 80:\n",
+        "  print(\"Grade A\")\n",
+        "elif score >= 70:\n",
+        "  print(\"Graade B\")\n",
+        "elif score >= 60:\n",
+        "    print(\"Grade C\")\n",
+        "elif score >= 50:\n",
+        "      print(\"Grade D\")\n",
+        "elif score >= 40:\n",
+        "          print(\"Grade E\")\n",
+        "else:\n",
+        "      print(\"Grade F\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "ankMALVhySFi",
-        "outputId": "b60acd3f-5d7a-4dd1-925a-05914c0faaee"
+        "id": "Tpg_MutJ_EyI",
+        "outputId": "56a3506d-32d0-4cfb-eac3-3c0ef1f4c94d"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "<class 'int'>\n",
-            "<class 'float'>\n",
-            "<class 'str'>\n",
-            "8\n"
+            "what is your score 88\n",
+            "Grade A\n"
           ]
         }
       ]
@@ -61,63 +65,40 @@
     {
       "cell_type": "code",
       "source": [
-        "number=\"10\"\n",
-        "number2= int(number)\n",
-        "type(number2)\n",
-        "print(number2,type(number))\n",
-        "float1= float(number2)\n",
-        "type(float1)\n",
-        "print(type(number),number,type(float1),float1,type(number2),number2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "lWVh1M5t2GAj",
-        "outputId": "b7dfe299-c78b-4693-9288-a571c3a2e909"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10 <class 'str'>\n",
-            "<class 'str'> 10 <class 'float'> 10.0 <class 'int'> 10\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "name=input(\"your name; \")\n",
-        "print(\"welcome\", name)\n",
+        "name=input(\"what is your name \")\n",
+        "print(\"hello,\",name,\",nice to see you here\")\n",
         "\n",
-        "age= input(\"plz enter your age; \")\n",
-        "print(type(age))\n",
+        "age=int(input(\"what is your age \"))\n",
+        "print(\"you are\",age,\"years old\")\n",
         "\n",
-        "age=int(age)\n",
-        "print(type(age))\n"
+        "if age > 17:\n",
+        "   print(\"you are an adult\")\n",
+        "   print(\"you can vote\")\n",
+        "elif age >= 13:\n",
+        "   print(\"you are a teenager\")\n",
+        "   print(\"go and sleep\")\n",
+        "else:\n",
+        "   print(\"you are a child\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kv5HB44W7glc",
-        "outputId": "4f28d27a-c10a-444c-9c7d-f82a8111f936"
+        "id": "dVIn6bnDHvTx",
+        "outputId": "a34a4fbd-0e23-4a7f-b85c-6c22663bf48d"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "your name; Ankit Raj SIngh\n",
-            "welcome Ankit Raj SIngh\n",
-            "plz enter your age; 19\n",
-            "<class 'str'>\n",
-            "<class 'int'>\n"
+            "what is your name ankit raj singh\n",
+            "hello, ankit raj singh ,nice to see you here\n",
+            "what is your age 19\n",
+            "you are 19 years old\n",
+            "you are an adult\n",
+            "you can vote\n"
           ]
         }
       ]
@@ -125,27 +106,82 @@
     {
       "cell_type": "code",
       "source": [
-        "number1 = float(input(\"enter your first number: \"))\n",
-        "number2 = float(input(\"enter your second number: \"))\n",
-        "result= number1 * number2\n",
-        "print (\"the multiplication of the your two no is\", result, \"see you soon sir\")"
+        "age=int(input(\"what is your age \"))\n",
+        "print(\"you are\",age,\"years old\")\n",
+        "income=int(input(\"what is your income \"))\n",
+        "print(\"you make\",income,\"rupees\")\n",
+        "if not (age >= 18 and income >= 20000):\n",
+        "  print(\"you are eligible for a loan\")\n",
+        "else:\n",
+        "  print(\"you are not eligible for a loan\")\n",
+        "  print(\"you are not eligible for a loan\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Xb2__t459zg6",
-        "outputId": "57ecfc7c-9967-44cf-8320-ce894ce0b92a"
+        "id": "EpjESKT5I_QS",
+        "outputId": "11798b7f-e202-4af6-f87e-bdbebb4e87d4"
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter your first number: 9.8\n",
-            "enter your second number: 9.1\n",
-            "the multiplication of the your two no is 89.18 see you soon sir\n"
+            "what is your age 19\n",
+            "you are 19 years old\n",
+            "what is your income 10000\n",
+            "you make 10000 rupees\n",
+            "you are eligible for a loan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number1=int(input(\"enter a number\"))\n",
+        "print(\"you entered number 1\")\n",
+        "number2=int(input(\"enter a number\"))\n",
+        "print(\"you entered number 2\")\n",
+        "\n",
+        "if number1 < 100 and number2 > 1:\n",
+        "  print(\"number 1 is less than 100\")\n",
+        "  print(\"number 2 is greater than 1\")\n",
+        "  print\n",
+        "else:\n",
+        "  print(\"number 1 is not less than 100\")\n",
+        "  print(\"number 2 is not greater than 1\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 228
+        },
+        "collapsed": true,
+        "id": "MEvb5BSULUCV",
+        "outputId": "df396d34-9f75-4f01-f58a-c028e1135b42"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "enter a number99\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'tuple' object is not callable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-75-f4c9ca6abe39>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mnumber1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enter a number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you entered number 1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mnumber2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enter a number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"you entered number 2\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
           ]
         }
       ]
