--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTE/nHlz2SOB1WGiqgqiCH",
+      "authorship_tag": "ABX9TyOCTM9u4jKXWoZOJScEAjvj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,35 +29,69 @@
     {
       "cell_type": "code",
       "source": [
-        "score=int(input(\"what is your score \"))\n",
-        "if score >= 80:\n",
-        "  print(\"Grade A\")\n",
-        "elif score >= 70:\n",
-        "  print(\"Graade B\")\n",
-        "elif score >= 60:\n",
-        "    print(\"Grade C\")\n",
-        "elif score >= 50:\n",
-        "      print(\"Grade D\")\n",
-        "elif score >= 40:\n",
-        "          print(\"Grade E\")\n",
+        "name=input(\"what is your name \")\n",
+        "print(\"hello,\", name,\"nice to meet you\")\n",
+        "ques=input(\"may i ask you some questions \")\n",
+        "if ques == str(\"yes\"):\n",
+        "  print(\"thanks for your cooperation\")\n",
         "else:\n",
-        "      print(\"Grade F\")\n"
+        "  print(\"see yoou soon\")\n",
+        "ques1=input(\"what is your hobby \")\n",
+        "print(\"you have a great hobby\",name, ques1,\"is a great thing to do\")\n",
+        "print(\"ok now one last question\")\n",
+        "ques2=int(input(\"how many hours you spend on your hobby in a week \"))\n",
+        "if ques2 >= 24:\n",
+        "   print(\"amazing,you are really passionate about your hobby\")\n",
+        "elif ques2 >= 18 :\n",
+        "   print(\"that's awesome, you like to spend\",ques)\n",
+        "elif ques2 >= 12:\n",
+        "   print(\"that's good, you take care of your hobby\")\n",
+        "else:\n",
+        "   print(\"you must give some time to\",ques1,)\n",
+        "ques3=input(\"which is your favorate color \")\n",
+        "print(\"good choice\", ques3,\"is a good color choice \")\n",
+        "ques4=int(input(\"what is your current age \"))\n",
+        "print(\"you are,\",ques4 ,\"years old \")\n",
+        "\n",
+        "print(\"considering all this, i think i got to know something about you\")\n",
+        "ques5=str(input(\"would you like to know what i know about you? \"))\n",
+        "if ques5 == str(\"yes\"):\n",
+        "   print(\"your name is\", name,\"your age is\", ques4, \"your favorate hobby is \", ques1, \"your favorate color is\", ques3)\n",
+        "else:\n",
+        "   print(\"see you soon\")\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
+        "id": "SDz_A6c6VAVe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Tpg_MutJ_EyI",
-        "outputId": "56a3506d-32d0-4cfb-eac3-3c0ef1f4c94d"
+        "outputId": "87002d0d-b990-4e6f-c332-e7a98d8edd44"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is your score 88\n",
-            "Grade A\n"
+            "what is your name Ankit Raj SIngh\n",
+            "hello, Ankit Raj SIngh nice to meet you\n",
+            "may i ask you some questions yes\n",
+            "thanks for your cooperation\n",
+            "what is your hobby Plying Cricket\n",
+            "you have a great hobby Ankit Raj SIngh Plying Cricket is a great thing to do\n",
+            "ok now one last question\n",
+            "how many hours you spend on your hobby in a week 24\n",
+            "amazing,you are really passionate about your hobby\n",
+            "which is your favorate color Red\n",
+            "good choice Red is a good color choice \n",
+            "what is your current age 19\n",
+            "you are, 19 years old \n",
+            "considering all this, i think i got to know something about you\n",
+            "would you like to know what i know about you? yes\n",
+            "your name is Ankit Raj SIngh your age is 19 your favorate hobby is  Plying Cricket your favorate color is Red\n"
           ]
         }
       ]
@@ -66,39 +100,27 @@
       "cell_type": "code",
       "source": [
         "name=input(\"what is your name \")\n",
-        "print(\"hello,\",name,\",nice to see you here\")\n",
-        "\n",
-        "age=int(input(\"what is your age \"))\n",
-        "print(\"you are\",age,\"years old\")\n",
-        "\n",
-        "if age > 17:\n",
-        "   print(\"you are an adult\")\n",
-        "   print(\"you can vote\")\n",
-        "elif age >= 13:\n",
-        "   print(\"you are a teenager\")\n",
-        "   print(\"go and sleep\")\n",
-        "else:\n",
-        "   print(\"you are a child\")\n"
+        "print(\"hello,\", name,\"nice to meet you\")\n",
+        "age=int(input(\"how old are you Mr \"+ name ))\n",
+        "print(\"you are,\", name, \"and you will be\", age+1, \"next year\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dVIn6bnDHvTx",
-        "outputId": "a34a4fbd-0e23-4a7f-b85c-6c22663bf48d"
+        "id": "idwzovQRGuco",
+        "outputId": "1f7483f7-2cb6-4938-e954-eb0ea5c64087"
       },
-      "execution_count": 35,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is your name ankit raj singh\n",
-            "hello, ankit raj singh ,nice to see you here\n",
-            "what is your age 19\n",
-            "you are 19 years old\n",
-            "you are an adult\n",
-            "you can vote\n"
+            "what is your name Ankit Raj Singh\n",
+            "hello, Ankit Raj Singh nice to meet you\n",
+            "how old are you Mr Ankit Raj Singh19\n",
+            "you are, Ankit Raj Singh and you will be 20 next year\n"
           ]
         }
       ]
@@ -106,34 +128,41 @@
     {
       "cell_type": "code",
       "source": [
-        "age=int(input(\"what is your age \"))\n",
-        "print(\"you are\",age,\"years old\")\n",
-        "income=int(input(\"what is your income \"))\n",
-        "print(\"you make\",income,\"rupees\")\n",
-        "if not (age >= 18 and income >= 20000):\n",
-        "  print(\"you are eligible for a loan\")\n",
+        "num1=float(input(\"enter your 1st no \"))\n",
+        "num2=float(input(\"enter your 2nd no \"))\n",
+        "sum= num1+num2\n",
+        "difference= num1\n",
+        "product= num1*num2\n",
+        "quotient= num1/num2\n",
+        "print(\"sum=\", sum)\n",
+        "print(\"difference=\", difference)\n",
+        "print(\"product=\", product)\n",
+        "print(\"quotient=\", quotient)\n",
+        "if num1 > num2:\n",
+        "  print(num1,\" is greater than\", num2)\n",
         "else:\n",
-        "  print(\"you are not eligible for a loan\")\n",
-        "  print(\"you are not eligible for a loan\")\n"
+        "  print(num2,\" is greater than\", num1)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EpjESKT5I_QS",
-        "outputId": "11798b7f-e202-4af6-f87e-bdbebb4e87d4"
+        "id": "92nclPQ5JHGo",
+        "outputId": "0f2e1da9-9dde-44eb-fa23-52488e92add2"
       },
-      "execution_count": 46,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "what is your age 19\n",
-            "you are 19 years old\n",
-            "what is your income 10000\n",
-            "you make 10000 rupees\n",
-            "you are eligible for a loan\n"
+            "enter your 1st no 8374783746384348468266\n",
+            "enter your 2nd no 7353525452547462378435\n",
+            "sum= 1.572830919893181e+22\n",
+            "difference= 8.374783746384349e+21\n",
+            "product= 6.158418543861809e+43\n",
+            "quotient= 1.1388800923349078\n",
+            "8.374783746384349e+21  is greater than 7.353525452547462e+21\n"
           ]
         }
       ]
@@ -141,26 +170,29 @@
     {
       "cell_type": "code",
       "source": [
-        "number1=int(input(\"enter a number\"))\n",
-        "print(\"you entered number 1\")\n",
-        "number2=int(input(\"enter a number\"))\n",
-        "print(\"you entered number 2\")\n",
-        "\n",
-        "if number1 < 100 and number2 > 1:\n",
-        "  print(\"number 1 is less than 100\")\n",
-        "  print(\"number 2 is greater than 1\")\n",
-        "  print\n",
-        "else:\n",
-        "  print(\"number 1 is not less than 100\")\n",
-        "  print(\"number 2 is not greater than 1\")\n",
-        "\n"
+        "name=input(\"what is your name \")\n",
+        "no=int(input(\"what is your favorate no \"))\n",
+        "print(\"your name is \", name, \"and 98 times your favorate no is \", 98*no)"
       ],
       "metadata": {
-        "collapsed": true,
-        "id": "MEvb5BSULUCV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a6rC5knENm5w",
+        "outputId": "ce7210a6-b086-49e6-dc22-dd9d0f778f81"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what is your name Ankit Raj Singh\n",
+            "what is your favorate no 7\n",
+            "your name is  Ankit Raj Singh and 98 times your favorate no is  686\n"
+          ]
+        }
+      ]
     }
   ]
 }
