--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCTM9u4jKXWoZOJScEAjvj",
+      "authorship_tag": "ABX9TyOp/tPY2DAjpr9pMBPU3+9U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         },
         "outputId": "87002d0d-b990-4e6f-c332-e7a98d8edd44"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "id": "idwzovQRGuco",
         "outputId": "1f7483f7-2cb6-4938-e954-eb0ea5c64087"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "id": "92nclPQ5JHGo",
         "outputId": "0f2e1da9-9dde-44eb-fa23-52488e92add2"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "a6rC5knENm5w",
         "outputId": "ce7210a6-b086-49e6-dc22-dd9d0f778f81"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,6 +190,112 @@
             "what is your name Ankit Raj Singh\n",
             "what is your favorate no 7\n",
             "your name is  Ankit Raj Singh and 98 times your favorate no is  686\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age=int(input(\"how old are you \"))\n",
+        "if age <= 13:\n",
+        "  print(\"you are a child\")\n",
+        "elif age <= 20:\n",
+        "  print(\"you are a teenager \")\n",
+        "elif age <= 60:\n",
+        "  print(\"you are an adult \")\n",
+        "else:\n",
+        "  print(\"you are a senior citizen \")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ea5FAQjfWCta",
+        "outputId": "cb3180cb-e8a6-4ba3-d6c4-278c6315c43a"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "how old are you 34\n",
+            "you are an adult \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1=float(input(\"what is your 1st number \"))\n",
+        "num2=float(input(\"what is your 2nd number \"))\n",
+        "\n",
+        "if num1 > num2:\n",
+        "  print(num1, \"is greater than\", num2)\n",
+        "elif num1 == num2:\n",
+        "  print(num1, \"is equal to\", num2)\n",
+        "else:\n",
+        "  print(num1, \"is smaller than\", num2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9LZEGFTyXTkR",
+        "outputId": "ab65d362-3a9e-4bdd-9643-98f5e161c174"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "what is your 1st number 99\n",
+            "what is your 2nd number 99\n",
+            "99.0 is equal to 99.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1=float(input(\"enter the 1st no \"))\n",
+        "num2=float(input(\"enter the 2nd no \"))\n",
+        "print(\"the numbers you entered are as follow :-\", num1, num2)\n",
+        "ques1=str(input(\"which operation you want to perform (+,-,*,/)\" ))\n",
+        "if ques1 == \"+\":\n",
+        "  print(\"sum=\", num1+num2 )\n",
+        "elif ques1 == \"-\":\n",
+        "  print(\"difference=\", num1-num2 )\n",
+        "elif ques1 == \"*\":\n",
+        "  print(\"product=\", num1*num2 )\n",
+        "elif ques1 == \"/\":\n",
+        "  print(\"quotien\", num1/num2 )\n",
+        "else:\n",
+        "   print(\"check your input\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hq1tf9kXZA15",
+        "outputId": "a4823211-0fa1-463e-9237-340db1b499a9"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter the 1st no 86644368989345688098989\n",
+            "enter the 2nd no 878565545443365576878777\n",
+            "the numbers you entered are as follow :- 8.664436898934569e+22 8.785655454433655e+23\n",
+            "which operation you want to perform (+,-,*,/)*\n",
+            "product= 7.612275730072072e+46\n"
           ]
         }
       ]
